# asap_app_console

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
main/: CMakeLists.txt
main/src/: abstract_application.h  console_runner.cpp  console_runner.h  detached_application.h  main.cpp
